--- a/backend-medusa/nixpacks.toml
+++ b/backend-medusa/nixpacks.toml
@@ -9,6 +9,7 @@ cmds = ["npm ci --no-audit --no-fund"]
 [phases.build]
 cmds = ["npm run build"]
 
+# Railway assigns PORT; Medusa must listen on 0.0.0.0 for healthcheck to succeed
 [start]
-cmd = "npm run start"
+cmd = "HOST=0.0.0.0 npm run start"
 
