--- a/backend-medusa/Dockerfile
+++ b/backend-medusa/Dockerfile
@@ -1,14 +1,20 @@
-# Use Node 20 (matches package.json engines).
-FROM node:20-alpine AS base
+# Stage 1: install deps and build (admin goes to .medusa/server/public/admin)
+FROM node:20-alpine AS builder
 WORKDIR /app
 
-# Install dependencies (no COPY after this that would overwrite node_modules).
 COPY package.json package-lock.json .npmrc ./
 RUN npm ci --no-audit --no-fund
 
-# Copy source and run build. Do NOT copy again after this so .medusa (admin build) is kept.
 COPY . .
 RUN npm run build
 
-# Runtime: start with Railway script (HOST=0.0.0.0, PORT from env).
+# Runtime looks for admin at public/admin, but build outputs to .medusa/server/public/admin — copy into place
+RUN mkdir -p public && cp -r .medusa/server/public/admin public/
+
+# Stage 2: runtime image with built app (including public/admin)
+FROM node:20-alpine AS runner
+WORKDIR /app
+
+COPY --from=builder /app .
+
 CMD ["node", "scripts/railway-start.js"]
